# redline2

./: .dockerignore  .dockerignore-micro  .gitignore  .vercelignore  =25.3  ACCESS_CONTROL_SUCCESS.md  ACCESS_CONTROL_TESTING.md  ADD_CLOUDFLARE_TO_EXISTING_RENDER.md  ADD_VIDEO_TO_SPLASH.md  ALL_SECURITY_FIXES_COMPLETE.md  API_DOCUMENTATION.md  API_IMPORTS_UPDATE_SUMMARY.md  API_REFACTORING_SUMMARY.md  ARM64_SUPPORT_IMPLEMENTATION_SUMMARY.md  ASSET_MINIFICATION_GUIDE.md  AUTO_COPY_OPTIONS.md  BALANCE_ERROR_FIX.md  BALANCE_TRACKER_TEST_GUIDE.md  BATCH_CONVERSION_FIXES_SUMMARY.md  CELERY_REDIS_INTEGRATION.md  CHANGELOG.md  CLEANUP_REMAINING.md  CLOUDFLARE_BRING_DOWN_DEPLOYMENT.md  CLOUDFLARE_DEPLOYMENT_WITH_SUBSCRIPTION.md  CLOUDFLARE_DNS_SETUP.md  CLOUDFLARE_R2_QUICK_SETUP.md  CLOUDFLARE_R2_SETUP.md  CLOUDFLARE_SPLASH_CRASH_FIX.md  CODEBASE_DUPLICATION_ANALYSIS.md  CODEBASE_SCAN_FOR_PAYMENT_INTEGRATION.md  CODEBASE_SCORE_ANALYSIS.md  CODE_REVIEW_COMPLETION.md  CODE_REVIEW_REPORT.md  COLOR_BLIND_ACCESSIBILITY.md  COMMERCIAL_PRODUCT_COMPARISON.md  COMPILED_DOCKER_GUIDE.md  COMPILE_SOURCE_GUIDE.md  COMPLETED_WORK_SUMMARY.md  COMPLETE_CLOUD_DEPLOYMENT.md  COMPLETE_STRIPE_SETUP.md  (+569 more)
.github/workflows/: docker-publish.yml  installer-build.yml  release.yml
.web/: reflex.json
alembic/: env.py
alembic/versions/: ae10e33ab1b0_initial_schema_users_user_hours_.py
archive/dockerfiles/: README.md
config/: massive_com_config.json
docker/: README.md  SUDO_REQUIREMENTS.md  macOS_USAGE_GUIDE.md
docker/gui/: Dockerfile  README.md  build.sh  start_gui_container.sh  test_gui.sh
docker/universal/: .dockerignore  Dockerfile  README.md  build.sh  start_gui_container.sh  start_web_container.sh  test_all_platforms.sh  test_universal.sh
docker/web/: Dockerfile  README.md  build.sh  start_web_container.sh  test_web.sh
dockerfiles/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.celery  Dockerfile.centos  Dockerfile.conservative-python39  Dockerfile.debian  Dockerfile.debug  Dockerfile.exact-local  Dockerfile.full-app  Dockerfile.git-safe  Dockerfile.license-server  Dockerfile.minimal-python311  Dockerfile.minimal-test  Dockerfile.no-upgrade  Dockerfile.python311  Dockerfile.rhel  Dockerfile.rocky  Dockerfile.safe-version  Dockerfile.simple  Dockerfile.simple-safe  Dockerfile.simple-test  Dockerfile.simple.nonroot  Dockerfile.step-by-step  Dockerfile.system-packages  Dockerfile.ultra-conservative  Dockerfile.ultra-minimal-python39  Dockerfile.ultra-simple  Dockerfile.web  Dockerfile.working-env  docker-compose.full.yml  docker.env.template
install/: INSTALLATION_README.md  LOCAL_INSTALLATION_GUIDE.md  README.md  check_dependencies.sh  install.sh  install_local_current_user.sh  install_ubuntu_intel.sh  install_universal.sh  test_tkinter_packages.sh  verify.sh
install/archive/: fix_import_issues.sh  fix_pandas_import.sh  fix_tkinter_ubuntu24.sh  fix_user_creation.sh  install_ubuntu_intel.sh  install_ubuntu_intel_current_user.sh  install_ubuntu_no_sudo.sh  install_universal.sh  verify_installation.sh
install/universal_installer/: UNIVERSAL_INSTALLATION_GUIDE.md  install.sh
licensing/: __init__.py
licensing/client/: __init__.py  license_validator.py
licensing/server/: __init__.py  license_server.py
modal_processing/: duckdb_service.py  requirements.txt
old/: README.md  analysis.py.original  api.py.original  api.py.refactored  comprehensive_financial_downloader.py  data.py.old_monolithic  multi_source_downloader.py  universal_gui_downloader.py
redline/: .dockerignore  CLEANUP_SUMMARY.md  CONTAINER_SETUP.md  DOCKER.md  Dockerfile  Dockerfile.celery  LICENSE_FIX.md  MIGRATION_COMPLETION_REPORT.md  MIGRATION_QUICK_REFERENCE.md  Makefile  NEXT_STEPS.md  PHASE6_CLEANUP_PLAN.md  PRODUCTION_READY.md  ROADMAP.md  TESTING_PLAN.md  __version__.py  docker-compose.prod.yml  docker-compose.yml  fix_data_tab_multi.md  requirements.txt  template.json  verify_migration.py
redline/auth/: __init__.py  access_control.py  hour_deduction.py  supabase_access_control.py  supabase_auth.py  supabase_config.py  usage_tracker.py
redline/background/: __init__.py  task_manager.py  tasks.py
redline/cli/: __init__.py  analyze.py  download.py
redline/clients/: modal_client.py
redline/core/: data_adapter_shared.py  data_cleaner.py  data_format_converter_shared.py  data_loader.py  data_loading_service.py  data_processing_shared.py  data_standardizer_shared.py  data_validator.py  format_converter.py  format_converters.py  format_loaders.py  format_savers.py  schema.py
redline/database/: README_SUPABASE.md  connection_pool.py  connector.py  connector_shared.py  migration_utils.py  models.py  operations.py  optimized_connector.py  query_builder.py  query_cache.py  session.py  supabase_client.py  (+4 more)
redline2/: Dockerfile
scripts/: build-multidist.sh  build-multiplatform.sh  build.sh  build_web_gui.sh  deploy-multiplatform.sh  deploy.sh  minify_assets.py  minify_assets_simple.py  publish_pypi.py  run_docker_headless.sh  run_docker_vnc.sh  run_docker_web.sh  run_docker_x11.sh  shutdown.sh  simple_web_run.sh  start.sh  start_celery_worker.sh  supabase_schema.sql  update_version.py
splash/: README.md  index.html  render.yaml
test/: simple_feather_test.py
tests/: run_distribution_tests.sh  test_distribution.py
universal_installer/: README.md  requirements_complete.txt
(+254 files in other folders)
